<resources>
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">TOPPINGS</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">QUANTITY</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="order">ORDER</string>
    <string name="add_whipped_cream_question">Add whipped cream?</string>
    <string name="add_chocolate_question">Add chocolate?</string>
    <string name="quantity_order">Quantity:</string>
    <string name="total">total</string>
    <string name="thank_you">Thank you</string>
</resources>